services/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: default
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - image: lscr.io/linuxserver/bazarr:latest
          imagePullPolicy: Always
          name: bazarr
          resources: {}
          ports:
            - name: bazarr
              containerPort: 6767
          livenessProbe:
            httpGet:
              path: /
              port: bazarr
            initialDelaySeconds: 60
            periodSeconds: 20
          volumeMounts:
            - name: host-disk1
              mountPath: /config
              subPath: bazarr
            - name: nfs-vol-disk3
              mountPath: /disk3
      volumes:
        - name: host-disk1
          hostPath:
            path: /disk1
        - name: nfs-vol-disk3
          nfs:
            server: 192.168.1.2
            path: /disk3
      restartPolicy: Always
status: {}
